add get gold price feature (bump to 0.2.30)